# poseidon-mss

./: .env.example  .gitignore  README.md  docker-compose.yml  poseidon-ais-architecture.md  poseidon-tech-design.md
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260112_000000_001_initial_schema.py
backend/app/: __init__.py  celery_app.py  config.py  main.py
backend/app/ais/: __init__.py  collision_detection.py  config.py  manager.py  models.py  processor.py  startup.py
backend/app/ais/adapters/: __init__.py  base.py  emulator.py
backend/app/api/: __init__.py  ais_routes.py  routes.py
backend/app/api/v1/: __init__.py  schemas.py  vessels.py  zones.py
backend/app/cache/: __init__.py  redis_client.py
backend/app/database/: __init__.py  base.py  connection.py  fixtures.py  init_db.py
backend/app/emulator/: __init__.py  behaviors.py  engine.py  scenarios.py  vessel.py
backend/app/models/: __init__.py  alert_acknowledgment.py  geofenced_zone.py  risk_alert.py  system_config.py  vessel.py  vessel_position.py
backend/app/socketio/: __init__.py  serializers.py  server.py
backend/app/tasks/: __init__.py  ais_ingestion.py
backend/tests/: __init__.py  test_database.py  test_health.py
docs/: ais-architecture.md  architecture.md  backend-api.md  database.md  frontend.md  functional-requirements.md
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scenarios/: ais_gap_dark_vessel.yaml  collision_threat.yaml  (+3 more)
(+16 files in other folders)
